--- a/Website.html
+++ b/Website.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:C="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Bozo boy</title>
+    <title>Magnus Andersen</title>
     <link rel="stylesheet" href="WebsiteStylesheet.css">
 
 
@@ -30,12 +30,20 @@
 <div class="text-box">
 
     <div class="image-box">
-        <img class="image-gnome" src="pngaaa.com-185149.png" onmouseenter="playSound()" onclick="revealText()">
+        <img class="image-gnome" src="pngaaa.com-185149.png" onmouseenter="playSound()">
     </div>
 
     <h1> Magnus Andersen</h1>
-    <p class="paraText"> Mega hygge <br>
-        asdkjasdkjaskdjaksdj
+    <p class="paraText"> Jeg er 21 år og går til dagligt på EASV Tønder. <br>
+        Til dagligt på jeg lige uden for Møgeltønder ved et sted <br>
+        der hedder Stokkebro.
+    </p>
+    <p class="paraText">
+        <b> Hobbyer: <br> </b>
+        Badminton <br>
+        Fodbold <br>
+        Madlavning <br>
+        Lytte til musik <br>
     </p>
 
 
