--- a/Website.html
+++ b/Website.html
@@ -35,7 +35,7 @@
 
     <h1> Magnus Andersen</h1>
     <p class="paraText"> Jeg er 21 år og går til dagligt på EASV Tønder. <br>
-        Til dagligt på jeg lige uden for Møgeltønder ved et sted <br>
+        Til dagligt bor jeg lige uden for Møgeltønder ved et sted <br>
         der hedder Stokkebro.
     </p>
     <p class="paraText">
