--- a/Website.html
+++ b/Website.html
@@ -36,7 +36,10 @@
     <h1> Magnus Andersen</h1>
     <p class="paraText"> Jeg er 21 år og går til dagligt på EASV Tønder. <br>
         Til dagligt bor jeg lige uden for Møgeltønder ved et sted <br>
-        der hedder Stokkebro.
+        der hedder Stokkebro. <br>
+        Gifler er den bedste opfindelse i verden. <br>
+        Jeg elsker at rejse og opleve nye kulturer.
+
     </p>
     <p class="paraText">
         <b> Hobbyer: <br> </b>
